Added Action Spaceman and TT-T Pages

--- a/showcase-vc.html
+++ b/showcase-vc.html
@@ -188,12 +188,18 @@
 				 <div class="desc">Racing Game Menu</div>
 			</div>
 		</a>
-		
+		</a>
+			<a target="_blank" href="images/vc/mockog.png">
+			<div class="gallery">
+				<img src="images/vc/mockog.png" alt="Mock-Up" width="600" height="400">			  
+				 <div class="desc">2018 Mock-Up</div>
+			</div>
+		</a>
 		</a>
 			<a target="_blank" href="images/vc/mock1.png">
 			<div class="gallery">
-				<img src="images/vc/mock1.png" alt="First Mock-Up" width="600" height="400">			  
-				 <div class="desc">First Mock-Up</div>
+				<img src="images/vc/mock1.png" alt="First UI Mock-Up" width="600" height="400">			  
+				 <div class="desc">First Development Mock-Up</div>
 			</div>
 		</a>
 		</a>
