--- a/showcase-ttt.html
+++ b/showcase-ttt.html
@@ -50,7 +50,7 @@
 			<iframe width="400" height="223"
 			src="https://www.youtube.com/embed/cYZMS2Pul_8?autoplay=1&mute=1"  allowfullscreen style="margin: auto;border:none">
 			</iframe>
-			<a href="images/ttt_dd.pdf" style="width: 400px; margin: auto;"><img class="asddlink" src="images/ttt_dd_thumb.png" style="border-radius:15px;"></a>
+			<a href="images/ttt_dd.pdf" style="width: 400px; margin: auto;"><img src="images/ttt_dd_thumb.PNG" style="border-radius:15px;"></a>
 		</section>
 		
     </main>
